use qmd_files folder as source_dir

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,13 +7,17 @@ website:
     left:
       - href: qmd/index.qmd
         text: Home
-      - qmd/dabout.qmd
+      - qmd/about.qmd
 
 format:
   html:
     theme: cosmo
     css: styles.css
     toc: true
+
+source_dir: qmd_files    
+
+
 
 
 
