--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,14 +12,14 @@ jobs:
       image: ghcr.io/david-awam-jansen/david-awam-jansen.github.io:latest
       credentials:
         username: ${{ github.actor }}
-        password: ${{ secrets.CR_PAT }}  # Use the secret github-containers
+        password: ${{ secrets.GHCR_PAT }}  # Use the secret github-containers
     env:
-      CR_PAT: ${{ secrets.CR_PAT }}  # Use the secret github-containers
+      CR_PAT: ${{ secrets.GHCR_PAT }}  # Use the secret github-containers
     permissions:
       contents: write
     steps:
       - name: Log in to GitHub Container Registry
-        run: echo "${CR_PAT}" | docker login ghcr.io -u david-awam-jansen --password-stdin
+        run: echo "${GHCR_PAT}" | docker login ghcr.io -u david-awam-jansen --password-stdin
 
       - name: Check out repository
         uses: actions/checkout@v4
