--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,11 +19,10 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
-
       - name: Commit results
         run: |
+          echo "I got here"
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          git add survey_data.rds
           git commit -m 'Data updated' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
