--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,24 +5,8 @@ on:
 jobs:
   import-data:
     runs-on: ubuntu-latest
-    steps:
-      - name: Set up R
-        uses: r-lib/actions/setup-r@v2
-
-      - name: Install packages
-        uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          packages: |
-            any::tidyverse 
-            any::googlesheets4
-
-      - name: Check out repository
-        uses: actions/checkout@v3
-
-      - name: Commit results
-        run: |
-          echo "I got here"
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
-          git commit -m 'Data updated' || echo "No changes to commit"
-          git push origin || echo "No changes to commit"
+    container:
+      image: ghcr.io/david-awam-jansen/r-github-actions:latest
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.CR_PAT }} 
