--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ jobs:
   import-data:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/david-awam-jansen/r-github-actions:latest
+      image: ghcr.io/david-awam-jansen/david-awam-jansen.github.io:latest
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.CR_PAT }}
