--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/david-awam-jansen/david-awam-jansen.github.io:latest
-      credentials:
-        username: ${{ github.actor }}
-        password: ${{ secrets.CR_PAT }}
+    env:
+      USERNAME: ${{ github.actor }}
+      PASSWORD: ${{ secrets.CR_PAT }}
     steps:
       - name: Your First Step
         run: echo "This is your first step, replace it with actual commands"
