--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,5 +11,7 @@ jobs:
       USERNAME: ${{ github.actor }}
       PASSWORD: ${{ secrets.GHRC_PAT }}
     steps:
+      - name: Print CR_PAT secret
+        run: echo ${{ secrets.CR_PAT }}      
       - name: Your First Step
         run: echo "This is your first step, replace it with actual commands"
