yet another test2

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,4 +7,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print CR_PAT secret
+      run: echo "Does this work!!!"
         run: echo ${{ secrets.CR_PAT }}
