--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,4 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print CR_PAT secret
-        run: echo ${{ secrets.CR_PAT }}
+        run: echo ${{ secrets.GHCR_PAT }}
