--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Print Secret Workflow
+name: Run Docker Container Workflow
 
 on:
   push:
@@ -6,10 +6,12 @@ on:
       - main
 
 jobs:
-  print-secret:
+  run-docker-container:
     runs-on: ubuntu-latest
     steps:
       - name: Print GHCR_secret secret
-        run: echo "${{ secrets.GHCR_secret }}"
+        run: echo "GHCR_secret: ${{ secrets.GHCR_secret }}"
       - name: Docker login
         run: echo "${{ secrets.GHCR_secret }}" | docker login ghcr.io -u david-awam-jansen --password-stdin
+      - name: Run Docker Container
+        run: docker run djanen1979/david-awam-jansen.github.io:latest
