--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,6 +12,6 @@ jobs:
       - name: Docker login
         run: echo "${{ secrets.GHCR_secret }}" | docker login ghcr.io -u david-awam-jansen --password-stdin
       - name: Run Docker Container
-        run: docker run djanen1979/david-awam-jansen.github.io:latest
+        run: docker run djanen1979/david-awam-jansen.github.io:latest /bin/bash
       - name: Print Docker Build Output
         run: cat output.txt
