add quarto render back to workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,17 +13,26 @@ jobs:
         run: echo "${{ secrets.GHCR_secret }}" | docker login ghcr.io -u david-awam-jansen --password-stdin
       - name: Run Docker Container
         run: docker run djanen1979/david-awam-jansen.github.io:latest /bin/bash
-    
-      - name: Generate Output File
-        run: echo "Output content" > output.txt
 
-      - name: Add Output File
-        run: git add output.txt
+      - name: Check out repository
+        uses: actions/checkout@v4
 
-      - name: Commit Changes
-        run: git commit -m "Add output.txt file"
-
-      - name: Push Changes
-        uses: ad-m/github-push-action@master
+      - name: Set up Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+      
+      - name: Render and Publish
+        uses: quarto-dev/quarto-actions/publish@v2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}   
+          target: gh-pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+#     - name: Add Output File
+#        run: git add output.txt#
+#
+#      - name: Commit Changes
+#        run: git commit -m "Add output.txt file"
+#
+#      - name: Push Changes
+#        uses: ad-m/github-push-action@master
+#        with:
+#          github_token: ${{ secrets.GITHUB_TOKEN }}   
