--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Run Docker Container
         run: docker run djanen1979/david-awam-jansen.github.io:latest /bin/bash
 
+      - name: Check R lib
+        run:  ls /usr/local/lib/R/site-library/
+
       - name: Check out repository
         uses: actions/checkout@v4
 
@@ -36,4 +39,4 @@ jobs:
 #      - name: Push Changes
 #        uses: ad-m/github-push-action@master
 #        with:
-#          github_token: ${{ secrets.GITHUB_TOKEN }}   
+#          github_token: ${{ secrets.GITHUB_TOKEN }} 
