--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
         run: docker run djanen1979/david-awam-jansen.github.io:latest /bin/bash
 
       - name: Check R lib
-        run:  ls /usr/local/lib/R/site-library/
+        run : "ls -la /usr/local/lib/R/site-library/"
 
       - name: Check out repository
         uses: actions/checkout@v4
