--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,8 @@ jobs:
         run: echo "${{ secrets.GHCR_secret }}" | docker login ghcr.io -u david-awam-jansen --password-stdin
 
       - name: Run Docker Container
-        run: docker run djanen1979/david-awam-jansen.github.io:latest /bin/bash
+        run: |
+          docker run ghcr.io/david-awam-jansen/david-awam-jansen.github.io:latest 
 
       - name: List files in the repository
         run: |
