--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,20 +1,25 @@
-name: Render and deploy Quarto files
+name: Build and Deploy
 on:
   push:
-  pull_request:
+    branches:
+      - main
+    paths:
+      - "*.qmd"
+      - "_quarto.yml"
+  workflow_dispatch:
 
 jobs:
-  quarto-render-and-deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    container:
+      image: rocker/verse:latest
     steps:
-    - uses: actions/checkout@v2
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
 
-    - name: Set up Quarto
-      uses: quarto-dev/quarto-actions/setup@v2
-
-    - name: Render and Publish
-      uses: quarto-dev/quarto-actions/publish@v2
-      with:
-        target: gh-pages
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install quarto
+        run: |
+          /rocker_scripts/install_quarto.sh
+      - name: Build site
+        run: |
+          quarto render
