--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,25 +3,30 @@ on:
   push:
     branches: main
 
-name: Publish website    
+name: Quarto Publish
 
 jobs:
-  build-and-deploy:
+  build-deploy:
     runs-on: ubuntu-latest
-    permissions: 
-        contents: write
-    container:
-      image: rocker/verse:latest
+    permissions:
+      contents: write
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v3
+      - name: Check out repository
+        uses: actions/checkout@v4
 
       - name: Set up Quarto
-        uses: quarto-dev/quarto-actions/setup@v2   
+        uses: quarto-dev/quarto-actions/setup@v2
 
-      #- name: Install quarto
-      #  run: |
-      #    /rocker_scripts/install_quarto.sh
+      - name: Install R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.2.0'
+
+      - name: Install R Dependencies
+        uses: r-lib/actions/setup-renv@v2
+        with:
+          cache-version: 1
+
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
         with:
