--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,9 +16,9 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Set up Quarto
-        uses: quarto-dev/quarto-actions/setup@v2
-
+      - name: Install quarto
+        run: |
+          /rocker_scripts/install_quarto.sh
     #  - name: Install R
     #    uses: r-lib/actions/setup-r@v2
     #    with:
