--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,24 +10,26 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    container:
-      image: rocker/verse:latest      
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Install quarto
-        run: |
-          /rocker_scripts/install_quarto.sh
-    #  - name: Install R
-    #    uses: r-lib/actions/setup-r@v2
-    #    with:
-    #      r-version: '4.2.0'
+      - name: Set up Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
 
-    #  - name: Install R Dependencies
-    #    uses: r-lib/actions/setup-renv@v2
-    #    with:
-    #      cache-version: 1
+      - name: Set up Docker
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: Build Docker image
+        run: |
+          docker build -t my_r_image ../../
+        working-directory: website/.github/workflows
+
+      - name: Run Docker container
+        run: docker run --rm my_r_image
+        working-directory: website/.github/workflows
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
