--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,8 +4,8 @@ on:
   workflow_dispatch:
   push:
     branches: main
-    paths:         ## only change if a change to a qmd file is pushed.
-      - '**/*.qmd' # This matches any qmd file in any subdirectory
+    paths:
+      - '**/*.qmd'
 
 jobs:
   build-deploy:
@@ -16,26 +16,14 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Set up Quarto
-        uses: quarto-dev/quarto-actions/setup@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Set up Docker
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-
-      - name: Build Docker image
-        run: |
-          docker build -t my_r_image -f Dockerfile ./docker
-        working-directory: docker
-
-      - name: Run Docker container
-        run: docker run --rm my_r_image
-        working-directory: docker
+      - name: Pull Docker image
+        run: docker pull david.awam.jansen.io:latest
 
       - name: Render and Publish
-        uses: quarto-dev/quarto-actions/publish@v2
-        with:
-          target: gh-pages
+        run: |
+          docker run --rm -v $(pwd):/workspace -w /workspace david.awam.jansen.io:latest quarto render --to=github --target=gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
