--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,11 +19,14 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Pull Docker image
-        run: docker pull david.awam.jansen.io:latest
+      #- name: Pull Docker image
+      #  run: docker pull david.awam.jansen.io:latest
 
       - name: Render and Publish
         run: |
-          docker run --rm -v $(pwd):/workspace -w /workspace david.awam.jansen.io:latest quarto render --to=github --target=gh-pages
+          docker run --rm -v $(pwd):/workspace -w /workspace david.awam.jansen.io:latest quarto 
+          render --to=github --target=gh-pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}render --to=github --target=gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
