--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag david.awam.jansen.io:latest
+      run: docker build . --file Dockerfile --tag my_local_docker:latest
+    - name: Run Docker container
+      run: docker run --name my_container -d my_local_docker:latest      
