checking quarto version

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,9 +25,11 @@ jobs:
       - name: Pull Docker image
         run: docker pull djanen1979/david-awam-jansen.github.io:latest
 
+      - name: Check Quarto version in Docker container
+        run: docker run --rm djanen1979/david-awam-jansen.github.io:latest quarto --version        
+
       - name: Render and Publish
         run: |
-          docker run --rm -v $(pwd):/workspace -w /workspace djanen1979/david-awam-jansen.github.io:latest quarto 
-          render --to=github --target=gh-pages
+          docker run --rm -v $(pwd):/workspace -w /workspace djanen1979/david-awam-jansen.github.io:latest quarto render --to=github --target=gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
