--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,10 +17,8 @@ jobs:
       - name: Check out repository-projects
         uses: actions/checkout@v2 
       - name: Run Docker container to compile assets
-        uses: docker://djanen1979/david-awam-jansen.github.io:latest
-        with:
-          args: >-
-            -v {{ github.workspace }}
+        run: |
+        docker run --rm -v "${{ github.workspace }}:/workspace" djanen1979/david-awam-jansen.github.io:latest
       - name: Check if Tidyverse folder exists
         run: |
           if [ -d "/usr/local/lib/R/library/tidyverse" ]; then
