--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,9 +46,9 @@ jobs:
           echo "Hello, Docker!" > hello_docker.txt
           docker run --rm -v "${{ github.workspace }}:/workspace" djanen1979/david-awam-jansen.github.io:latest cp /workspace/hello_docker.txt /tmp/hello_docker.txt
       - name: Check if file exists inside Docker container
-        run: docker run --rm djanen1979/david-awam-jansen.github.io:latest ls /tmp/hello_docker.txt
+        run: docker run --rm djanen1979/david-awam-jansen.github.io:latest ls 
       - name: see the file
-        run: docker run --rm djanen1979/david-awam-jansen.github.io:latest cat /tmp/hello_docker.txt
+        run: docker run --rm djanen1979/david-awam-jansen.github.io:latest cat hello_docker.txt
           
 
         
